Made token-wise node scores plots

--- a/01-SFC/SFC_main.ipynb
+++ b/01-SFC/SFC_main.ipynb
@@ -344,7 +344,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "DATASET_NAME = SupportedDatasets.COMMONSENSE_QA_FILTERED\n",
+        "DATASET_NAME = SupportedDatasets.FACTS\n",
         "\n",
         "if DATASET_NAME in [SupportedDatasets.CITIES, SupportedDatasets.FACTS, SupportedDatasets.COMPANIES]:\n",
         "    dataloader = SFCDatasetLoader(DATASET_NAME, model, \n",
