Ablation experiment finished

--- a/01-SFC/SFC_main.ipynb
+++ b/01-SFC/SFC_main.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cuda:2\n"
+      "Device: cuda:1\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "torch.set_grad_enabled(False)\n",
     "\n",
     "# Device setup\n",
-    "GPU_TO_USE = 2\n",
+    "GPU_TO_USE = 1\n",
     "\n",
     "if torch.backends.mps.is_available():\n",
     "    device = \"mps\"\n",
@@ -216,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b68f05edaf8d4f3f906bb92d42db31c0",
+       "model_id": "8b51946108b54d49a43cbfc0f521500d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,6 +318,26 @@
     "\n",
     "model = HookedSAETransformer.from_pretrained(MODEL_NAME, device=device, dtype=torch.bfloat16)\n",
     "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([16, 3584, 256]), torch.Size([16, 256, 3584]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.blocks[0].attn.W_V.shape, model.blocks[0].attn.W_O.shape"
    ]
   },
   {
@@ -690,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +721,6 @@
     "    answer_pos_idx = einops.repeat(ansnwer_pos, 'batch -> batch 1 d_vocab',\n",
     "                                    d_vocab=logits.shape[-1])\n",
     "    answer_logits = logits.gather(1, answer_pos_idx).squeeze(1) # shape [batch, d_vocab]\n",
-    "    print(answer_pos_idx.shape)\n",
     "\n",
     "    correct_logits = answer_logits.gather(1, clean_answers.unsqueeze(1)).squeeze(1) # shape [batch]\n",
     "\n",
